GPencil: Edit Mode,Toggle Cap don't support Multiframe mode usage #100171

Closed
opened 2022-08-03 15:01:04 +02:00 by hamza.SMA · 10 comments

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.39

Blender Version
Broken: version: 3.2.1, branch: master, commit date: 2022-07-05 15:44, hash: a2d59b2dac
Worked: (newest version of Blender that worked as expected)

Short description of error
all option of toggle cap don't work while using multiframe, please enjoy the video 2022-08-03 13-58-04.mp4

**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.39 **Blender Version** Broken: version: 3.2.1, branch: master, commit date: 2022-07-05 15:44, hash: `a2d59b2dac` Worked: (newest version of Blender that worked as expected) **Short description of error** all option of toggle cap don't work while using multiframe, please enjoy the video [2022-08-03 13-58-04.mp4](https://archive.blender.org/developer/F13333767/2022-08-03_13-58-04.mp4)
Author

Added subscriber: @hamza-el-barmaki

Added subscriber: @hamza-el-barmaki

Added subscriber: @antoniov

Added subscriber: @antoniov
Antonio Vazquez self-assigned this 2022-08-03 15:19:37 +02:00

I need add this feature to caps operator.

I need add this feature to caps operator.
Author

In #100171#1399257, @antoniov wrote:
I need add this feature to caps operator.

thank you very much, is it rude to use this meme here? sorry if it is

> In #100171#1399257, @antoniov wrote: > I need add this feature to caps operator. thank you very much, is it rude to use this meme here? sorry if it is

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 1ffb011d67

This issue was referenced by 1ffb011d677647f6e049e9ca76d1ba31d156308a

This issue was referenced by bdc30bd0fb

This issue was referenced by bdc30bd0fba20d2513478cad838d1216b662976d

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Antonio Vazquez changed title from GPencil:Edit Mode,Toggle Cap don't support Multiframe mode usage to GPencil: Edit Mode,Toggle Cap don't support Multiframe mode usage 2022-08-03 15:45:43 +02:00
Author

is not added to daily build,is it because is still as known issues state ?

is not added to daily build,is it because is still as known issues state ?

I did the fix in 3.4 only...I'm going to include it in 3.3 too.

I did the fix in 3.4 only...I'm going to include it in 3.3 too.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#100171
No description provided.