Fix T100171: GPencil toggle caps operator does not support multiframe

This was a missing feature.